feat:updated README

--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 
-This is an eCommerce website built using React JS.
+This is an multi-page eCommerce website built using React JS and react-router.
